# aiclient

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
aiclient/: __init__.py  agent.py  batch.py  client.py  data_types.py  exceptions.py  middleware.py  observability.py  resilience.py  testing.py  types.py  utils.py
aiclient/agents/: simple.py
aiclient/cache/: __init__.py  semantic.py
aiclient/mcp/: client.py  manager.py
aiclient/memory/: base.py  simple.py
aiclient/models/: chat.py
aiclient/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py
aiclient/resilience/: __init__.py  retries.py
aiclient/tools/: __init__.py  base.py  policy.py
aiclient/transport/: base.py  http.py
blog/: medium-announcement.md
docs/: features.md  middleware.md
examples/: demo_agent.py  demo_mcp.py  demo_streaming.py  demo_vision.py  observability.py  prompt_caching.py  resilience.py  structured_outputs.py  testing_your_app.py
examples/cookbook/: agent_web_search.py  batch_processing.py  chatbot_with_memory.py  rag_pipeline.py  streaming_chatbot.py
tests/: test_agent.py  test_agent_mcp.py  test_batch.py  test_caching.py  test_client.py  test_errors.py  test_integration.py  test_integration_e2e.py  test_mcp.py  test_memory.py  test_middleware.py  test_middleware_integration.py  test_observability.py  test_resilience.py  test_resilience_advanced.py  test_retries.py  test_retry_middleware.py  test_semantic_cache.py  test_structured.py  test_testing_utils.py  test_tools.py  test_vision.py
